# ml-playground

./: .gitignore  README.md  pyproject.toml
classification/decision-tree-classification/: main.ipynb
classification/ensemble-classification/: main.ipynb
classification/knn-classification/: main.ipynb
classification/logistic-regression/: main.ipynb
classification/naive-bayes-classification/: main.ipynb
classification/svm-classification/: main.ipynb
clustering/dbscan-clustering/: main.ipynb
clustering/hierarchical-clustering/: main.ipynb
clustering/k-means-clustering/: main.ipynb
dimensionality-reduction/lda-analysis/: main.ipynb
dimensionality-reduction/pca-analysis/: main.ipynb
model-evaluation/cross-validation/: main.ipynb
model-evaluation/model-evaluation/: main.ipynb
regression/decision-tree-regression/: main.ipynb
regression/ensemble-regression/: main.ipynb
regression/multiple-linear-regression/: main.ipynb
regression/polynomial-regression/: main.ipynb
regression/ridge-lasso-regression/: main.ipynb
regression/simple-linear-regression/: main.ipynb
